Iframe overflow fixed

--- a/assets/sass/mx-styling/_singlePage.scss
+++ b/assets/sass/mx-styling/_singlePage.scss
@@ -60,6 +60,9 @@
             margin: 3em 0;
             max-width: 700px;
             margin: 0 auto;
+            iframe{
+                width: 100%;
+            }
         }
         .firstText{
             margin-top: 0;
